--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,10 @@ on:
     tags:
       - "v*"
 
+# Add permissions needed for creating releases
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build for ${{ matrix.os }} (${{ matrix.target }})
