--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ async-std = { version = "1", features = ["attributes"] }
 anyhow = "1"
 colored = "3"
 ignore = "0.4"
+phf = {version = "0.11.3", features = ["macros"]}
