--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "code_prompt"
 version = "0.1.1"
-edition = "2021"
+edition = "2024"
 authors = ["lollipopkit <a@lpkt.cn>"]
-description = "Combine code files into a single file for LLM prompts."
+description = "Combine files into a single knowledge base file for LLMs"
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 async-std = { version = "1", features = ["attributes"] }
 anyhow = "1"
 colored = "3"
-ignore = "0.4"
-phf = {version = "0.11.3", features = ["macros"]}
+ignore = "^0.4"
+phf = { version = "^0.11", features = ["macros"] }
